[package]
name = "stegcloak-rs"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
argon2 = "0.6.0-rc.7"
chacha20poly1305 = "0.11.0-rc.3"
getrandom = { version = "0.4", features = ["wasm_js"] }
thiserror = "2"
js-sys = "0.3.88"
miniz_oxide = "0.9.0"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--all-features"]
